# Temporis

./: CMakeLists.txt  LICENSE  README.md  analyze_latency.py  fit_regime_bayesian.py  fit_regime_correlated.py  parser_seattle.py  queue_model.md  temporis_report.py
config/: config.json  config_queu.json  config_queue_n10.json  config_queue_n70.json  config_zenoh.json
examples/: consensus_demo.cpp
include/: ExperimentParams.hpp
include/latency/: Agent.hpp  LatencyModel.hpp  LatencyModelParams.hpp  Message.hpp  NetworkSimulator.hpp  QueueLatencyModel.hpp  RegimeLatencyModel.hpp
results/run_1775522392831804450/: config.json  metrics.csv  network.csv  system.csv
results/run_1775522417101593601/: config.json  metrics.csv  network.csv  system.csv
results/run_1775522446901325890/: config.json  metrics.csv  network.csv  system.csv
scripts/: fit_regime_correlated.py  make_post_figures.py  plot_results.py  plot_results_real_data.py
src/: ExperimentParams.cpp  NetworkSimulator.cpp  QueueLatencyModel.cpp  RegimeLatencyModel.cpp
temporis/: plot_results.py
temporis/fit/: __init__.py
tests/: test_fit.py  test_latency.cpp
